--- a/ExampleOktyPod/Podfile
+++ b/ExampleOktyPod/Podfile
@@ -2,7 +2,7 @@
 # platform :ios, '6.0'
 
 target 'ExampleOktyPod' do
-    pod 'OKTY-Salesforce-iOS', :git => "https://github.com/Oktana/OKTY-Salesforce-iOS"
+    pod 'OKTY-Salesforce-iOS'
 end
 
 target 'ExampleOktyPodTests' do
